sketched out kie module

--- a/src/test.config
+++ b/src/test.config
@@ -4,6 +4,11 @@
 # scaling factor for frequencies
 scaling 0.9614
 
+# frequencies below this value will be considered imaginary frequencies and
+# ignored for the calculation of the partition function ratios
+# (units in cm^-1)
+frequency_threshold 50
+
 # temperature in K
 temperature 393
 
