reformmating config file

--- a/src/test.config
+++ b/src/test.config
@@ -13,9 +13,7 @@ frequency_threshold 50
 temperature 393
 
 # reference isotopomer
-# KIEs will be referenced to this
-# use 0 for no referencing
-reference_isotopomer 5
+[ new definition here]
 
 # define the isotopomers here
 #
