Refactoring to calculate KIE using just the mw hessian.

--- a/src/test.config
+++ b/src/test.config
@@ -13,7 +13,9 @@ frequency_threshold 50
 temperature 393
 
 # reference isotopomer
-[ new definition here]
+reference_isotopomer reference
+isotopomer reference 1 1 12C
+#isotopomer reference 1 5 13C
 
 # define the isotopomers here
 #
