KIEs working except for reference isotopomer.

--- a/src/test.config
+++ b/src/test.config
@@ -2,6 +2,7 @@
 # Blank lines and lines starting with # will be ignored.
 
 # scaling factor for frequencies
+#scaling 1.000
 scaling 0.9614
 
 # frequencies below this value will be considered imaginary frequencies and
@@ -14,8 +15,8 @@ temperature 393
 
 # reference isotopomer
 reference_isotopomer reference
-isotopomer reference 1 1 12C
-#isotopomer reference 1 5 13C
+isotopomer reference 5 5 12C
+#isotopomer reference 1 1 13C
 
 # define the isotopomers here
 #
@@ -26,12 +27,12 @@ isotopomer reference 1 1 12C
 # for example, isotopomer 1 2 4 3 replaces atom 2 in the gs with tritium and atom 4 in the ts with tritium
 # add additional lines to give multiple replacements within a single isotopomer
 isotopomer 1 1 1 13C
-isotopomer 2 2 2 13C
-isotopomer 3 3 3 17O
-isotopomer 4 4 4 13C
+#isotopomer 2 2 2 13C
+#isotopomer 3 3 3 17O
+#isotopomer 4 4 4 13C
 isotopomer 5 5 5 13C
-isotopomer 6 6 6 13C
+#isotopomer 6 6 6 13C
 
 # example of doing a multiple replacement
-isotopomer 7 7 7 2D
-isotopomer 7 8 8 2D
+#isotopomer 7 7 7 2D
+#isotopomer 7 8 8 2D
