--- a/src/test.config
+++ b/src/test.config
@@ -1,38 +1,38 @@
-# This file will control the behavior of QUIVER.
+# This file will control the behavior of PyQuiver.
 # Blank lines and lines starting with # will be ignored.
 
 # scaling factor for frequencies
-#scaling 1.000
 scaling 0.9614
 
-# frequencies below this value will be considered imaginary frequencies and
-# ignored for the calculation of the partition function ratios
+# frequencies below this value will be considered either small or imaginary frequencies and ignored for the calculation of the partition function ratios
 # (units in cm^-1)
 frequency_threshold 50
 
 # temperature in K
 temperature 393
 
-# reference isotopomer
+# This line specifies the name of the isotopomer to use as reference
 reference_isotopomer reference
-isotopomer reference 5 5 12C
-#isotopomer reference 1 1 13C
 
 # define the isotopomers here
 #
-# isotopomer number, atom number in ground state, atom number in transition state, replacement atomic weight
+# isotopomer name, atom number in ground state, atom number in transition state, valid replacement atomic weight (must be specified in weights.dat)
 #
-# isotopomer number should start at 1 and increase 1 at a time
 #
-# for example, isotopomer 1 2 4 3 replaces atom 2 in the gs with tritium and atom 4 in the ts with tritium
-# add additional lines to give multiple replacements within a single isotopomer
+# for example, 'isotopomer tritium 2 4 3' replaces atom 2 in the gs with tritium and atom 4 in the ts with tritium
+# add additional isotopomer lines with the same name to give multiple replacements within a single isotopomer
+
+# the name reference was selected above as the reference isotopomer
+isotopomer reference 5 5 13C
+
 isotopomer 1 1 1 13C
-#isotopomer 2 2 2 13C
-#isotopomer 3 3 3 17O
-#isotopomer 4 4 4 13C
+isotopomer 2 2 2 13C
+isotopomer 3 3 3 17O
+isotopomer 4 4 4 13C
+# this is identical to the reference isotopomer and therefore ought to product a value of 1.00 (which it does)
 isotopomer 5 5 5 13C
-#isotopomer 6 6 6 13C
+isotopomer 6 6 6 13C
 
 # example of doing a multiple replacement
-#isotopomer 7 7 7 2D
-#isotopomer 7 8 8 2D
+isotopomer 7 7 7 2D
+isotopomer 7 8 8 2D
