Added unsubstituted isotopologue field.

--- a/src/test.config
+++ b/src/test.config
@@ -11,8 +11,10 @@ frequency_threshold 50
 # temperature in K
 temperature 393
 
+unsubstituted_isotopologue 1
+
 # This line specifies the name of the isotopomer to use as reference
-reference_isotopomer reference
+reference_isotopomer default
 
 # define the isotopomers here
 #
