Can now read pyquiver input files and dump the appropriate input files.

--- a/src/test.config
+++ b/src/test.config
@@ -11,10 +11,10 @@ frequency_threshold 50
 # temperature in K
 temperature 393
 
-unsubstituted_isotopologue 1
+unsubstituted_isotopologue default
 
 # This line specifies the name of the isotopomer to use as reference
-reference_isotopomer default
+reference_isotopomer reference
 
 # define the isotopomers here
 #
