Changed reference iso name.

--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -14,7 +14,7 @@ temperature 393
 mass_override_isotopologue default
 
 # This line specifies the name of the isotopomer to use as reference
-reference_isotopomer reference
+reference_isotopomer C5
 
 # define the isotopomers here
 #
@@ -25,7 +25,6 @@ reference_isotopomer reference
 # add additional isotopomer lines with the same name to give multiple replacements within a single isotopomer
 
 # the name reference was selected above as the reference isotopomer
-isotopomer reference 5 5 13C
 
 isotopomer C1 1 1 13C
 isotopomer C2 2 2 13C
