--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -15,6 +15,8 @@ mass_override_isotopologue default
 
 # This line specifies the name of the isotopomer to use as reference
 reference_isotopomer C5
+# Uncomment to calculate absolute KIEs only.
+#reference_isotopomer default
 
 # define the isotopomers here
 #
