--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -16,7 +16,7 @@ mass_override_isotopologue default
 # This line specifies the name of the isotopomer to use as reference
 reference_isotopomer C5
 # Uncomment to calculate absolute KIEs only.
-#reference_isotopomer default
+#reference_isotopomer none
 
 # define the isotopomers here
 #
