--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -7,6 +7,7 @@ scaling 0.9614
 # frequencies below this value will be considered either small or imaginary frequencies and ignored for the calculation of the partition function ratios
 # (units in cm^-1)
 frequency_threshold 50
+imag_threshold 50
 
 # temperature in K
 temperature 393
