--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -2,19 +2,26 @@
 # Blank lines and lines starting with # will be ignored.
 
 # scaling factor for frequencies
+# frequencies will be multiplied by this value
 scaling 0.9614
 
-# frequencies below this value will be considered either small or imaginary frequencies and ignored for the calculation of the partition function ratios
-# (units in cm^-1)
+# frequencies less than this value in cm-1 will be ignored for non-transition modes
 frequency_threshold 50
+
+# imaginaries less than this value in i*cm-1 will be ignored for the transition mode
 imag_threshold 50
 
 # temperature in K
 temperature 393
 
+# specifies the masses used for the light isotopomer
+# specify the name of an isotopomer or
+# use "default" to use the default masses in weights.dat
 mass_override_isotopologue default
 
-# This line specifies the name of the isotopomer to use as reference
+# all KIEs will be divided by the KIE at this position
+# specify the name of an isotopomer or
+# use "default" or "none" to skip this step
 reference_isotopomer C5
 # Uncomment to calculate absolute KIEs only.
 #reference_isotopomer none
@@ -23,8 +30,9 @@ reference_isotopomer C5
 #
 # isotopomer name, atom number in ground state, atom number in transition state, valid replacement atomic weight (must be specified in weights.dat)
 #
+# for example, 'isotopomer abc 2 4 C13' replaces atom 2 in the gs and atom 4 in the ts with carbon-13
+# and calls the resulting KIE "abc"
 #
-# for example, 'isotopomer tritium 2 4 3' replaces atom 2 in the gs with tritium and atom 4 in the ts with tritium
 # add additional isotopomer lines with the same name to give multiple replacements within a single isotopomer
 
 # the name reference was selected above as the reference isotopomer
@@ -33,7 +41,8 @@ isotopomer C1 1 1 13C
 isotopomer C2 2 2 13C
 isotopomer O3 3 3 17O
 isotopomer C4 4 4 13C
-# this is identical to the reference isotopomer and therefore ought to product a value of 1.00 (which it does)
+
+# this is identical to the reference isotopomer and therefore ought to produce a value of 1.00 (which it does)
 isotopomer C5 5 5 13C
 isotopomer C6 6 6 13C
 
