more complete bugfix

--- a/test/claisen_demo.config
+++ b/test/claisen_demo.config
@@ -5,8 +5,8 @@
 # frequencies will be multiplied by this value
 scaling 0.9614
 
-# frequencies less than this value in cm-1 will be ignored for non-transition modes
-frequency_threshold 50
+### deprecated: this keyword will now be ignored ###
+#frequency_threshold 50
 
 # imaginaries less than this value in i*cm-1 will be ignored for the transition mode
 imag_threshold 50
